# telegrambot-stock-ai-rust

./: .gitignore  CHANGES.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  config.json.example  docker-compose.yml
.github/workflows/: docker.yml
src/: alerts.rs  analyzer.rs  bot.rs  config.rs  fetcher.rs  formatter.rs  main.rs  scheduler.rs  searcher.rs  user_store.rs
