[package]
name = "stock-analysis-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Telegram Bot 框架
teloxide = { version = "0.12", features = ["macros"] }

# 非同步執行時
tokio = { version = "1", features = ["full"] }

# HTTP 客戶端
reqwest = { version = "0.12", features = ["json"] }

# JSON 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 排程
tokio-cron-scheduler = "0.13"

# HTML 解析（ISIN 上櫃清單）
scraper = "0.20"

# 日期時間
chrono = { version = "0.4", features = ["serde"] }

# 錯誤處理
anyhow = "1"

# 日誌
log = "0.4"
env_logger = "0.11"
